# chess

./: .gitignore  CMakeLists.txt  Makefile  README.md  bishop.cpp  bishop.hpp  board.cpp  board.hpp  cell.cpp  cell.hpp  chess.sublime-workspace  figure.cpp  figure.hpp  install_dev_env.sh  king.cpp  king.hpp  knight.cpp  knight.hpp  main.cpp  move.cpp  move.hpp  panel.cpp  panel.hpp  pawn.cpp  pawn.hpp  piece.cpp  piece.hpp  pngtex.cpp  pngtex.hpp  position.cpp  position.hpp  queen.cpp  queen.hpp  rook.cpp  rook.hpp
